<resources>
    <string name="app_name">BooksApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="books">Books</string>
    <string name="favorites">Favorite Books</string>
    <string name="buy_book">Buy Book</string>
    <string name="book_authors">Authors</string>
    <string name="book_description">Description</string>
    <string name="book_title">Book Title</string>
    <string name="save_book">Save to Favorite</string>
    <string name="delete_book">Delete Book</string>
</resources>