<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@color/list_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivBookImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/bookTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_weight="3"
        android:text="@string/book_title"
        android:textColor="@color/list_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10sp"
        android:textSize="16sp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textColor="@color/list_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookAuthorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/book_authors"
                android:textColor="@color/list_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="3"
                android:textColor="@color/list_text" />

            <TextView
                android:id="@+id/bookDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="3"
                android:text="@string/book_description"
                android:textColor="@color/list_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/list_text" />

            <Button
                android:id="@+id/buyBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:text="@string/buy_book"
                android:textColor="@color/list_text" />

            <LinearLayout
                android:id="@+id/favoritesLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="4dp"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/ic_baseline_favorite_24"
                        app:tint="@color/white" />
                    <TextView
                        android:id="@+id/saveDeleteText"
                        android:layout_width="wrap_content"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/save_book"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>